[package]
name = "pg-test"
version = "0.1.0"
authors = ["Julius de Bruijn <julius+github@nauk.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quaint = { git = "https://github.com/prisma/quaint.git", features = ["all"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
log = "0.4"
pretty_env_logger = "0.3"
anyhow = "1"
